--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Google Homepage - Odin Project</title>
+        <title>Google FLEX</title>
         <meta name="description" content="Odin Project assignment - Google Homepage Clone">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
