--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-        <div id="nav-main">
+        <div id="nav-main" class="flex-container">
             <div id="nav-left">
-                <a>Gmail</a>
-                <a>Images</a>
-            </div>
-            <div id"nav-right">
                 <a>About</a>
                 <a>Store</a>
+            </div>
+            <div id="nav-right">
+                <a>Gmail</a>
+                <a>Images</a>
             </div>
         </div>
 
